--- a/src/components/card/CardPessoa/style.scss
+++ b/src/components/card/CardPessoa/style.scss
@@ -14,9 +14,12 @@
         min-width: 48px;
     }
 
+    #fotoURL {
+        background: url('../../../assets/images/defaultProfilePicture.png') center/100% no-repeat;
+    }
+
     .defaultPicture {
         content-visibility: hidden;
-        background: url('../../../assets/images/defaultProfilePicture.png') center/100% no-repeat;
     }
 
     p {
