--- a/src/components/card/CardPessoa/style.scss
+++ b/src/components/card/CardPessoa/style.scss
@@ -16,6 +16,7 @@
 
     #fotoURL {
         background: url('../../../assets/images/defaultProfilePicture.png') center/100% no-repeat;
+        background-color: var(--cardGrupoPessoas-bg-shadow);
     }
 
     .defaultPicture {
