--- a/src/components/session/MainHeader/style.scss
+++ b/src/components/session/MainHeader/style.scss
@@ -31,6 +31,7 @@ screen and (min-width: 768px) {
 screen and (max-width: 768px) {
     .mainHeader {
         justify-content: center;
+        margin-top: 8px;
         margin-bottom: 16px;
 
         #pageTitulo {
