--- a/src/components/card/CardPostAcao/style.scss
+++ b/src/components/card/CardPostAcao/style.scss
@@ -57,7 +57,7 @@
             border: 2px solid var(--cardPostAcao-bg);
         }
 
-        .aprovado {
+        .stepAprovado {
             background-color: var(--cardPostAcao-bg-highlight) !important;
         }
 
@@ -84,6 +84,12 @@
             height: 32px;
             border-radius: 16px;
             object-fit: cover;
+            background: url('../../../assets/images/defaultProfilePicture.png') center/100% no-repeat;
+            background-color: var(--cardPostAcao-bg-highlight);
+        }
+
+        .defaultPicture {
+            content-visibility: hidden;
         }
 
         #autor,
@@ -109,8 +115,8 @@
     }
 }
 
-.postAcaoReprovada,
-.postAcaoAprovada {
+.postAcao-reprovado,
+.postAcao-aprovado {
     background-color: var(--postAcaoConcluido-bg) !important;
     border: 2px solid var(--postAcaoConcluido-bg) !important;
 
@@ -129,6 +135,10 @@
     #postAutor {
         #dataDeAtualizacao {
             color: var(--postAcaoConcluido-highlight) !important;
+        }
+
+        #fotoURL {
+            background-color: var(--postAcaoConcluido-highlight) !important;
         }
     }
 }
