--- a/src/components/modal/ModalNovaAcao/style.scss
+++ b/src/components/modal/ModalNovaAcao/style.scss
@@ -4,7 +4,7 @@
     gap: 8px;
 
     button {
-        flex: 1;
+        width: 100%;
         padding: 12px;
         border-radius: 8px;
         background-color: var(--body-bg-shadow);
