feat: paginas de minhas ações e ajustes no layout da header

--- a/src/app/(auth)/login/style.scss
+++ b/src/app/(auth)/login/style.scss
@@ -9,7 +9,7 @@
         justify-items: center;
         width: 180px;
         height: 180px;
-        border: 2px solid #DCDCDC;
+        border: 2px solid var(--body-input-border);
         border-radius: 50%;
         margin-bottom: 20px;
         object-fit: cover;
