--- a/src/components/button/ButtonPerfil/style.scss
+++ b/src/components/button/ButtonPerfil/style.scss
@@ -14,6 +14,16 @@
         border: 2px solid var(--body-bg);
     }
 
+    #fotoURL {
+        background: url('../../../assets/images/defaultProfilePictureDark.png') center/100% no-repeat;
+        background-color: var(--body-bg-shadow);
+    }
+
+    .defaultPicture {
+        border: 2px solid var(--body-input-border);
+        content-visibility: hidden;
+    }
+
     .perfilDados {
         display: flex;
         flex-direction: column;
@@ -21,13 +31,13 @@
         gap: 2px;
 
         h1 {
-            font-size: 16px;
+            font-size: 20px;
             font-weight: 400;
             color: var(--body-font);
         }
 
         p {
-            font-size: 16px;
+            font-size: 14px;
             font-weight: 700;
             overflow: hidden;
             text-overflow: ellipsis;
