--- a/src/components/modal/Modal/style.scss
+++ b/src/components/modal/Modal/style.scss
@@ -115,8 +115,10 @@
 
             .modalFooter {
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
                 align-items: center;
+                gap: 8px;
                 padding: 16px;
             }
         }
