--- a/src/components/modal/ModalAnexos/style.scss
+++ b/src/components/modal/ModalAnexos/style.scss
@@ -1,18 +1,23 @@
-.modalEmendasVinculadas {
+.modalAnexos {
     display: flex;
     flex-direction: column;
     gap: 8px;
     flex: 1;
 
-    .emenda {
+    .doc {
         display: flex;
         flex-direction: row;
         align-items: center;
         flex: 1;
-        padding: 16px;
+        gap: 16px;
+        padding: 8px;
         background-color: var(--body-bg-shadow);
         border-radius: 8px;
 
+        img {
+            width: 32px;
+            height: 32px;
+        }
 
         p {
             font-size: 16px;
