--- a/src/components/session/ListPropostaVinculada/style.scss
+++ b/src/components/session/ListPropostaVinculada/style.scss
@@ -1,4 +1,4 @@
-.listEmendasVinculadas {
+.listPropostaVinculada {
     max-width: 540px;
     display: flex;
     flex-direction: column;
@@ -14,7 +14,7 @@
         margin-left: 4px;
     }
 
-    .emenda {
+    .proposta {
         display: flex;
         flex-direction: row;
         align-items: center;
