--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -204,6 +204,16 @@ a {
     }
 }
 
+.inputText {
+    padding: 16px 24px;
+    box-sizing: border-box;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 8px;
+    border: 1px solid var(--body-input-border);
+    background: transparent;
+}
+
 /* Alterações para Mobile */
 @media screen and (max-device-width: 768px),
 screen and (max-width: 768px) {
