--- a/src/components/nav/Navigation/style.scss
+++ b/src/components/nav/Navigation/style.scss
@@ -3,10 +3,13 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+
 }
 
 .navigation {
     gap: 24px;
+    height: 100%;
+    margin-bottom: 144px;
     background-color: var(--body-bg);
 
     .groups {
