feat: emendas podem ser criadas a partir de propostas, status atual em steps é mostrado na página de ação

--- a/src/app/(pages)/acao/[id]/style.scss
+++ b/src/app/(pages)/acao/[id]/style.scss
@@ -59,6 +59,7 @@ screen and (max-width: 480px) {
             padding-bottom: 0;
 
             button,
+            .linkButton,
             #botaoVoltar {
                 width: 100%;
             }
