--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -5,6 +5,7 @@
     --body-bg-alternative: #2E3134;
     --body-bg-highlight: #9F7E25;
     --body-bg-shadow: #F3F6F8;
+    --body-bg-shadow-2: #d5dcdf;
     --body-bg-ok: #41aa4c;
     --body-bg-warning: #cc951f;
     --body-bg-attention: #ee5454;
