--- a/src/components/pageAcao/SessionProposta/style.scss
+++ b/src/components/pageAcao/SessionProposta/style.scss
@@ -1,6 +1,6 @@
 .sessionProposta {
 
-    .cardStatusFinal,
+    .cardStatus,
     .cardInfoDesc,
     .cardAlteracoes {
         margin-bottom: 16px;
