--- a/src/components/modal/ResponseModal/style.scss
+++ b/src/components/modal/ResponseModal/style.scss
@@ -77,7 +77,7 @@
                 }
             }
 
-            .sucess svg {
+            .success svg {
                 fill: var(--body-bg-ok);
             }
 
