--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -104,6 +104,13 @@
     &::-webkit-scrollbar-track {
         background-color: var(--body-bg);
     }
+
+    // Ocultar as setas do input number
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        appearance: none;
+    }
 }
 
 body {
