Feat: paginas de editar foto de perfil e dados pessoais ok

--- a/src/app/(pages)/(manager)/edit/user/[cim]/style.scss
+++ b/src/app/(pages)/(manager)/edit/user/[cim]/style.scss
@@ -7,3 +7,11 @@
         gap: 40px;
     }
 }
+
+/* Alterações para Mobile */
+@media screen and (max-device-width: 768px),
+screen and (max-width: 768px) {
+    .pageEditUser {
+        width: 100%;
+    }
+}
